# StereoDSO

./: .gitignore  CMakeLists.txt  README.md  history.txt  run.sh  run_euroc_rectify.sh  run_kitti_mono.sh  run_stereo.sh
configs/EuRoC/: cam0.yaml  cam1.yaml  camera_left_rec.txt  camera_right_rec.txt  imu_parameters.yaml
configs/Kitti/: Kitti_image_size.txt  camera_left.txt  camera_right.txt
configs/Kitti/00/: camera_right.txt
configs/Kitti/01/: camera_left.txt
configs/Kitti/03/: camera_left.txt  camera_right.txt
configs/Kitti/08/: camera_right.txt
configs/Kitti/09/: camera_left.txt
results/MINE_data/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
results/ORB_SLAM2_data/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt
results/plot_error/: 00_rl.eps  00_rl.gp  00_rl.txt  00_rs.eps  00_rs.gp  00_rs.txt  00_tl.eps  00_tl.gp  00_tl.txt  00_ts.eps  00_ts.gp  00_ts.txt  01_rl.eps  01_rl.gp  01_rl.txt  01_rs.eps  01_rs.gp  01_rs.txt  01_tl.eps  01_tl.gp  01_tl.txt  01_ts.eps  01_ts.gp  01_ts.txt  02_rl.eps  02_rl.gp  02_rl.txt  02_rs.eps  02_rs.gp  02_rs.txt  02_tl.eps  02_tl.gp  02_tl.txt  02_ts.eps  02_ts.gp  02_ts.txt  03_rl.eps  03_rl.gp  03_rl.txt  03_rs.eps  (+104 more)
results/plot_path/: 00.eps  00.gp  00.txt  01.eps  01.gp  01.txt  02.eps  02.gp  02.txt  03.eps  03.gp  03.txt  04.eps  04.gp  04.txt  05.eps  05.gp  05.txt  06.eps  06.gp  06.txt  07.eps  07.gp  07.txt  08.eps  08.gp  08.txt  09.eps  09.gp  09.txt  10.eps  10.gp  10.txt
src/: main_convert_groundtruth_euroc_dataset.cpp  main_convert_groundtruth_kitti_dataset.cpp  main_convert_result.cpp  main_dso_pangolin.cpp  main_dso_pangolin_euroc.cpp  main_dso_pangolin_kitti.cpp  main_rectify_euroc_dataset.cpp
src/FullSystem/: CMakeLists.txt  CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemDebugStuff.cpp  FullSystemMarginalize.cpp  FullSystemOptPoint.cpp  FullSystemOptimize.cpp  FullSystemPREOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  IMUResiduals.cpp  IMUResiduals.hpp  ImmaturePoint.cpp  ImmaturePoint.h  PixelSelector.h  PixelSelector2.cpp  PixelSelector2.h  ResidualProjections.h  Residuals.cpp  Residuals.h
src/IOWrapper/: CMakeLists.txt  ImageDisplay.h  ImageDisplay_dummy.cpp  ImageRW.h  ImageRW_dummy.cpp  Output3DWrapper.h
src/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  ImageRW_OpenCV.cpp
src/IOWrapper/OutputWrapper/: SampleOutputWrapper.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
src/OptimizationBackend/: AccumulatedSCHessian.cpp  AccumulatedSCHessian.h  AccumulatedTopHessian.cpp  AccumulatedTopHessian.h  CMakeLists.txt  EnergyFunctional.cpp  EnergyFunctional.h  EnergyFunctionalStructs.cpp  EnergyFunctionalStructs.h  MatrixAccumulators.h  PREEnergyFunctional.cpp  PREEnergyFunctional.h  RawResidualJacobian.h
src/okvis_kinematics/: CMakeLists.txt
src/okvis_kinematics/include/okvis/kinematics/: Transformation.hpp  operators.hpp
src/okvis_kinematics/include/okvis/kinematics/implementation/: Transformation.hpp
src/okvis_kinematics/test/: TestTransformation.cpp  runTests.cpp
src/okvis_util/: CMakeLists.txt
src/okvis_util/include/okvis/: assert_macros.hpp  source_file_pos.hpp
src/util/: CMakeLists.txt  DatasetReader.h  FrameShell.h  IMUMeasurement.h  IMUPropagation.cpp  IMUPropagation.h  ImageAndExposure.h  IndexThreadReduce.h  MinimalImage.h  NumType.h  Undistort.cpp  Undistort.h  globalCalib.cpp  globalCalib.h  globalFuncs.h  nanoflann.h  settings.cpp  settings.h
